# product-recommendations-api

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: __init__.py
app/api/routers/: __init__.py  recommendations.py
app/services/: recommendations.py
app/services/utils/: utils.py
app/tests/recommendations/: conftest.py  test_recommendations.py
